Project

General

Profile

Actions

Bug #48214

closed

osd: fix bluestore bitmap allocator

Added by yantao xue over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
% Done:

0%

Source:
Tags:
Backport:
nautilus, octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

bluestore bitmap allocator calculate wrong last_pos with hint, for hint is a bdev physical addr.


Related issues 2 (0 open2 closed)

Copied to bluestore - Backport #48281: octopus: osd: fix bluestore bitmap allocatorResolvedNathan CutlerActions
Copied to bluestore - Backport #48282: nautilus: osd: fix bluestore bitmap allocatorResolvedNathan CutlerActions
Actions #1

Updated by Igor Fedotov over 3 years ago

  • Project changed from Ceph to bluestore
  • Category deleted (OSD)
Actions #2

Updated by Kefu Chai over 3 years ago

  • Status changed from New to Pending Backport
  • Backport set to nautilus, octopus
  • Pull request ID set to 38043
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48281: octopus: osd: fix bluestore bitmap allocator added
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48282: nautilus: osd: fix bluestore bitmap allocator added
Actions #5

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF