osd: fix bluestore bitmap allocator calculated wrong last_pos with hint

Fixes: https://tracker.ceph.com/issues/48214

Signed-off-by: Xue Yantao <jhonxue@tencent.com>